src/objects/ContactGroupSurveyAssignment__c.object
<CustomObject>
    <description>Junction object for many to many relationship between Survey and Contact Group objects</description>
    <fields>
        <fullName>ContactGroup__c</fullName>
        <label>Contact Group</label>
        <referenceTo>ContactGroup__c</referenceTo>
        <relationshipName>ContactGroupSurveyAssignment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DatePublishedToThisGroup__c</fullName>
        <description>Same as created date but with a custom label</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Assigned to this Group</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The date that the assignment to the group ends</description>
        <label>Assignment end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MemberCount__c</fullName>
        <formula>ContactGroup__r.MemberCount__c</formula>
        <label>Number of group members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Any remarks about the assignment</description>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The date that the assignment begins</description>
        <label>Assignment start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Contact Group Survey Assignment</relationshipLabel>
        <relationshipName>Contact_Group_Survey_Assignment</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Total # of target submissions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assigned Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Survey__c</columns>
        <columns>ContactGroup__c</columns>
        <columns>Target__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CGSA-{00000000}</displayFormat>
        <label>Assignment Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Consistent_start_and_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c  &gt;  EndDate__c</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>End Date cannot be before Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_submissions_must_be_possitive</fullName>
        <active>true</active>
        <errorConditionFormula>Target__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Target__c</errorDisplayField>
        <errorMessage>Total # of target submissions cannot be less than zero.</errorMessage>
    </validationRules>
</CustomObject>